compiler/testData/diagnostics/tests/incompleteCode/variableDeclarationInSelector.kt
fun foo(s: String) {
    s.<!SYNTAX!><!>
    val <!UNUSED_VARIABLE!>b<!> = 42
}
